# rustodian

./: .gitignore  Cargo.toml  DEVLOG.md  LICENSE-APACHE  LICENSE-MIT  README.md  cliff.toml  deny.toml  fix_audit.sh  fix_clippy.sh  fix_storage.py  fix_test.sh  fix_zipslip_windows.py  gemini.md  get_err.sh  justfile  patch_core.sh  patch_scanner.sh  patch_storage.sh  patch_ui.sh  plan.md  pr_description.md  run_test_runner.rs  test_symlink.rs  update.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml  security-audit.yml
crates/rustodian-cli/: Cargo.toml
crates/rustodian-cli/src/: main.rs  output.rs
crates/rustodian-cli/src/commands/: config.rs  info.rs  janitor.rs  list.rs  logs.rs  mod.rs  remote.rs  run.rs  scan.rs  status.rs
crates/rustodian-cli/tests/: cli_tests.rs
crates/rustodian-core/: Cargo.toml
crates/rustodian-core/src/: bootstrapper.rs  custodian.rs  error.rs  janitor.rs  lib.rs  log_buffer.rs  runner.rs  traits.rs
crates/rustodian-desktop/: Cargo.toml
crates/rustodian-desktop/src/: main.rs  markdown.rs  message.rs  worker.rs
crates/rustodian-desktop/src/snapshots/: rustodian_desktop__markdown__tests__parse_markdown_commands.snap  rustodian_desktop__markdown__tests__parse_markdown_tasks.snap
crates/rustodian-git/: Cargo.toml
crates/rustodian-git/src/: error.rs  inspector.rs  lib.rs
crates/rustodian-remote/: Cargo.toml
crates/rustodian-remote/src/: downloader.rs  error.rs  lib.rs
crates/rustodian-scanner/: Cargo.toml
crates/rustodian-scanner/src/: commands.rs  detection.rs  error.rs  lib.rs  scanner.rs
crates/rustodian-storage/: Cargo.toml
crates/rustodian-storage/src/: error.rs  lib.rs  log_store.rs  migrations.rs  remote_store.rs  store.rs
crates/rustodian-types/: Cargo.toml
crates/rustodian-types/src/: language.rs  lib.rs  project.rs  scan.rs  vcs.rs
docs/: ARCHITECTURE.md  DEVELOPMENT.md  TESTING.md
docs/features/: BOOTSTRAP_ISOLATION.md  DIGITAL_JANITOR.md  REMOTE_TRACKING.md  STORAGE_INTERNALS.md
migrations/: 001_initial.sql  002_add_project_logs.sql
xtask/: Cargo.toml
xtask/src/: export_rag.rs  main.rs
