[workspace]
members = ["crates/*", "xtask"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["drawmeanelephant"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/drawmeanelephant/rustodian"
rust-version = "1.85"

[workspace.dependencies]
# Internal crates
rustodian-types = { path = "crates/rustodian-types" }
rustodian-core = { path = "crates/rustodian-core" }
rustodian-storage = { path = "crates/rustodian-storage" }
rustodian-scanner = { path = "crates/rustodian-scanner" }
rustodian-git = { path = "crates/rustodian-git" }

# CLI
clap = { version = "4.6", features = ["derive", "env"] }
comfy-table = "7.2"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Git
git2 = { version = "0.21", default-features = false, features = ["vendored-libgit2"] }

# Filesystem
ignore = "0.4"

# Dev/Test
tempfile = "3.27"
assert_cmd = "2.2"
predicates = "3.1"
insta = "1.48"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Allow these common pedantic lints
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
