[package]
name = "rustodian-core"
description = "Domain logic, traits, and orchestration for Rustodian"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = "0.1"
chrono.workspace = true
nix = { version = "0.31.3", features = ["process", "signal"] }
rustodian-types.workspace = true
shlex = "2.0.1"
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
