[package]
name = "rustodian-core"
description = "Domain logic, traits, and orchestration for Rustodian"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = "0.1"
chrono.workspace = true
rustodian-types.workspace = true
shlex = "2.0.1"
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31.3", features = ["process", "signal"] }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
