[package]
name = "rustodian-desktop"
description = "Desktop graphical interface for Rustodian"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "rustodian-desktop"
path = "src/main.rs"

[dependencies]
rustodian-types.workspace = true
rustodian-core.workspace = true
rustodian-storage.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
eframe = "0.35.0"
ahash = "0.8.12"
dirs = "6.0.0"
rfd = "0.17.2"
rustodian-scanner.workspace = true
rustodian-git.workspace = true

[lints]
workspace = true

[dev-dependencies]
insta.workspace = true
