[package]
name = "rustodian-git"
description = "Git repository inspection for Rustodian"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rustodian-types.workspace = true
rustodian-core.workspace = true
git2.workspace = true
tracing.workspace = true
thiserror.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
