[package]
name = "rustodian-scanner"
description = "Filesystem project discovery for Rustodian"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rustodian-types.workspace = true
rustodian-core.workspace = true
ignore.workspace = true
tracing.workspace = true
thiserror.workspace = true
toml = "1.1.2"
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
